objects/agf__ADM_Feature_Freeze_Status__c.object
<CustomObject>
    <fields>
        <fullName>agf__Explain_Java_Package_and_PL_SQL_Coverage__c</fullName>
        <description>Explain if the Java Package or PL/SQL Coverage is &lt; 20%</description>
        <inlineHelpText>Explain if the Java Package or PL/SQL Coverage is &lt; 20%</inlineHelpText>
        <label>Explain Java Package and PL/SQL Coverage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Num_P1_Bugs_TF_to_Fix_Verify__c</fullName>
        <label>Explain Num P1 Bugs/TF to Fix/Verify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Num_P2_Bugs_TF_to_Fix_Verify__c</fullName>
        <label>Explain Num P2 Bugs/TF to Fix/Verify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_Bugs__c</fullName>
        <inlineHelpText>Explain Open P0, P1 &amp; P2 Bugs</inlineHelpText>
        <label>Explain Open Bugs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_Feature_Requests__c</fullName>
        <label>Explain Open Feature Requests</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_Non_Deterministic_Test_NDT__c</fullName>
        <inlineHelpText>Explain Open Non Deterministic Test (NDT) Not Required for Sign-off</inlineHelpText>
        <label>Explain Open Non Deterministic Test</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_P012_Bugs__c</fullName>
        <inlineHelpText>P012 Bugs = Zero</inlineHelpText>
        <label>Explain Open P012 Bugs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_RCA_Bugs__c</fullName>
        <inlineHelpText>All P0,1,2 Bugs from RCAs older than 1 month, *including* previous or current releases should be closed.</inlineHelpText>
        <label>Explain Open RCA Bugs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_RCA_Stories__c</fullName>
        <inlineHelpText>All User-stories from RCAs older than 1 month, must be closed or scheduled for a release or sprint</inlineHelpText>
        <label>Explain Open RCA Stories</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_RCA_To_D__c</fullName>
        <inlineHelpText>All ToDos (all priorities) from RCAs older than 1 month, *including* previous or current releases should be closed.</inlineHelpText>
        <label>Explain Open RCA To Do&apos;s</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_Regression__c</fullName>
        <inlineHelpText>Regressions = Zero</inlineHelpText>
        <label>Explain Open Regression</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_Security_bugs__c</fullName>
        <inlineHelpText>P012 Security Bugs are closed or approved by ProdSec in the release that is open at the time of their discovery.</inlineHelpText>
        <label>Explain Open Security bugs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_TF_1_Week__c</fullName>
        <inlineHelpText>TF &gt; 1 Week = Zero {Inc Flappers}</inlineHelpText>
        <label>Explain Open TF &gt; 1 Week {Inc Flappers}</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_TF__c</fullName>
        <inlineHelpText>TF on basic ftest, basic selenium &amp; utest = Zero
(Does not inc Flappers)</inlineHelpText>
        <label>Explain Open TF&apos;s</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_User_Stories__c</fullName>
        <description>Number of Open User Stories – excluding “Release Sprint Theme” stories (0)</description>
        <inlineHelpText>Number of Open User Stories – excluding “Release Sprint Theme” stories (0)</inlineHelpText>
        <label>Explain Open User Stories</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_P0_Blocking_Bugs__c</fullName>
        <description>Explain if P0/Blocking Bugs are &gt; 0</description>
        <inlineHelpText>Explain if P0/Blocking Bugs are &gt; 0</inlineHelpText>
        <label>Explain Your P0/Blocking Bugs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_P0_Bugs_at_FF__c</fullName>
        <description>IT Feature Freeze Criteria for teams to provide explanation for any open P0 bugs at FF.</description>
        <inlineHelpText>Provide an explanation for any open P0 bugs at FF.</inlineHelpText>
        <label>Explain P0 Bugs at FF</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_P1_P2_Bugs_TF_1_wk_old__c</fullName>
        <label>Explain P1/P2 Bugs/TF &gt;1 wk old</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Pending_Auto_Integrations__c</fullName>
        <label>Explain Pending Auto Integrations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Sprint_DOD_Criteria__c</fullName>
        <inlineHelpText>If not met, please explain</inlineHelpText>
        <label>Explain Sprint DOD Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_TF_to_Fix__c</fullName>
        <description>Explain the number of Test Failures to Fix.</description>
        <inlineHelpText>Explain the number of Test Failures to Fix.</inlineHelpText>
        <label>Explain Test Failures to Fix</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_TF_to_Fix_or_Verify_1_week_0__c</fullName>
        <description>Explain if Total Number of Test Failures to Fix or Verify more than 1 week old is &gt; 0</description>
        <inlineHelpText>Explain if Total Number of Test Failures to Fix or Verify more than 1 week old is &gt; 0</inlineHelpText>
        <label>Explain Test Failures  &gt;1 week</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_if_Biz_Sox_Not_Met__c</fullName>
        <label>Explain if Biz SOX Not Met</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_if_Blocking_Bugs_Exist_on_Freeze__c</fullName>
        <label>Explain if Blocking Bugs Exist on Freeze</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_if_IT_Infra_not_Met__c</fullName>
        <description>IT Feature Freeze Criteria to explain if IT Infrastructure required is not setup, configured, tested or documented (if required for Apps).</description>
        <inlineHelpText>IT Feature Freeze Criteria to explain if IT Infrastructure required is not setup, configured, tested or documented (if required for Apps).</inlineHelpText>
        <label>Explain IT Infra not Met</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_if_Not_Complete__c</fullName>
        <label>Explain if Not Complete</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_if_PerfEng_Requirements_not_Met__c</fullName>
        <label>Explain if PerfEng Requirements not Met</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_if_Regressions_Exist_on_Freeze__c</fullName>
        <label>Explain if Regressions Exist on Freeze</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_if_Scripts_not_Verified__c</fullName>
        <label>Explain if Scripts not Verified</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_if_Solution_Swimlanes_not_Built__c</fullName>
        <label>Explain if Solution Swimlanes not Built</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_if_TF_Count_is_High__c</fullName>
        <label>Explain if TF Count is High</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_if_TF_Exist__c</fullName>
        <description>Explain if your team has TF on basic ftest, basic selenium or utest.</description>
        <inlineHelpText>Explain if your team has TF on basic ftest, basic selenium or utest.</inlineHelpText>
        <label>Explain if TF Exist</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_if_TF_not_Trending_Down__c</fullName>
        <description>Explain if the Test Failure rate is not trending downward.</description>
        <inlineHelpText>Explain if the Test Failure rate is not trending downward.</inlineHelpText>
        <label>Explain if TF not Trending Down</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_if_Unable_to_Sign_off_for_ZD__c</fullName>
        <inlineHelpText>By signing Off Teams are confirming:
Work for Pre, Post, Retired scripts are done.
Identified Features to be enabled with Retired Scripts
Completed all action items assigned to them by ZD Team</inlineHelpText>
        <label>Explain if Unable to Sign off for ZD</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_if_VAT_review_not_Complete__c</fullName>
        <inlineHelpText>IT VAT architecture reviews, requirements and exceptions have been performed and noted.</inlineHelpText>
        <label>Explain if VAT review not Complete</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_if_bug_count_is_high__c</fullName>
        <description>Bugs Fixed the Week of Feature Freeze (explain if count is high relative to previous 2-3 weeks)</description>
        <inlineHelpText>Bugs Fixed the Week of Feature Freeze (explain if count is high relative to previous 2-3 weeks)</inlineHelpText>
        <label>Explain if Bug Count is High</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_if_bugs_not_trending_down__c</fullName>
        <description>P0/P1/P2 Bugs Found the Week of Feature Freeze (explain if count is not trending downward compared to previous 2-3 weeks)</description>
        <inlineHelpText>P0/P1/P2 Bugs Found the Week of Feature Freeze (explain if count is not trending downward compared to previous 2-3 weeks)</inlineHelpText>
        <label>Explain if Bugs not Trending Down</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_if_count_is_high__c</fullName>
        <description>Bugs/TF Fixed the Week of Feature Freeze (explain if count is high relative to previous 2-3 weeks)</description>
        <inlineHelpText>Bugs/TF Fixed the Week of Feature Freeze (explain if count is high relative to previous 2-3 weeks)</inlineHelpText>
        <label>Explain if Count is High</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_if_not_Behind_a_Perm_or_Equiv__c</fullName>
        <description>No team should put the release at risk – Any Feature or change that is large enough or invasive enough to risk the release is behind a permission or equivalent safety valve (Yes/No)</description>
        <inlineHelpText>No team should put the release at risk – Any Feature or change that is large enough or invasive enough to risk the release is behind a permission or equivalent safety valve (Yes/No)</inlineHelpText>
        <label>Explain if not Behind a Perm or Equiv</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_if_not_trending_downward__c</fullName>
        <description>P0/P1/P2 Bugs/TF Found the Week of Feature Freeze (explain if count is not trending downward compared to previous 2-3 weeks)</description>
        <inlineHelpText>P0/P1/P2 Bugs/TF Found the Week of Feature Freeze (explain if count is not trending downward compared to previous 2-3 weeks)</inlineHelpText>
        <label>Explain if not Trending Downward</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Features_Complete_and_DoD_Achieved__c</fullName>
        <inlineHelpText>Are all features complete and meeting the criteria of the Definition of Done?</inlineHelpText>
        <label>Feature Complete and DoD Achieved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Features_Enabled_Within_24hrs_of_Relea__c</fullName>
        <inlineHelpText>Teams are required to confirm that all features will be enabled within 24 hrs of the Release</inlineHelpText>
        <label>Features Enabled Within 24hrs of Release</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                    <default>true</default>
                    <label>True</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Features_Enabled_by_Retirement_Scripts__c</fullName>
        <description>Teams should call out any features that will be enabled when the retired scripts are run in the new zero downtime process.</description>
        <inlineHelpText>Call out any features that will be enabled when the retired scripts are run in the new zero downtime process.</inlineHelpText>
        <label>Features Enabled by Retirement Scripts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Features_Enabled_within_24hrs__c</fullName>
        <inlineHelpText>Teams are required to confirm that all features will be enabled within 24 hrs of the Release</inlineHelpText>
        <label>Features Enabled within 24hrs of Release</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Features_behind_perm_disabled__c</fullName>
        <inlineHelpText>Are incomplete features behind a perm and disabled?</inlineHelpText>
        <label>Feature behind perm / disabled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Features_with_Perf_Test_Outstanding__c</fullName>
        <description>Are remaining features which have not yet completed performance testing, ready to be handed over to Performance Engineering Team?”</description>
        <inlineHelpText>What does it mean to be ready?

•	Test plans are finalized &amp; reviewed.

•	Features with known performance risk are disabled by default (behind perm, config switch)</inlineHelpText>
        <label>Features with Perf Test Outstanding</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Freeze_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Freeze Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__GUS_Signoff_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GUS Signoff Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__GUS_Signoff_Date__c</fullName>
        <label>GUS Signoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__IT_Compliance_Met__c</fullName>
        <description>IT Feature Freeze Criteria to meet all legal, tax, regulatory, regional, business and IT SOX compliance.</description>
        <inlineHelpText>Confirm that all legal, tax, regulatory, regional, business and IT SOX compliance has been met for the features being released.</inlineHelpText>
        <label>IT Compliance Met</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__IT_Data_Conversion_Plan_Complete__c</fullName>
        <description>IT Feature Freeze Criteria to ensure a data conversion plan has been automated, tested, reviewed, validated and potentially performance tuned.</description>
        <inlineHelpText>IT Feature Freeze Criteria to ensure a data conversion plan has been automated, tested, reviewed, validated and potentially performance tuned.</inlineHelpText>
        <label>IT Data Conversion Plan Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__IT_Infra__c</fullName>
        <description>IT Feature Freeze Criteria to ensure Infrastructure is setup, configured, tested and documented (if required for Apps).</description>
        <inlineHelpText>Infrastructure is setup, configured, tested and documented (if required).</inlineHelpText>
        <label>IT Infra Requirements Met</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__IT_Prod_Support_Model_Complete__c</fullName>
        <description>IT Feature Freeze Criteria to ensure a Production Support model has been documented, reviewed and signed off (Tier 1, Tier 2, etc.)</description>
        <inlineHelpText>IT Feature Freeze Criteria to ensure a Production Support model has been documented, reviewed and signed off (Tier 1, Tier 2, etc.)</inlineHelpText>
        <label>IT Prod Support Model Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__IT_Rollback_Plan_Complete__c</fullName>
        <description>IT Feature Freeze Criteria to ensure rollback and contingency plans have been documented, tested and are ready for IT VAT and CAB review.</description>
        <inlineHelpText>IT Feature Freeze Criteria to ensure rollback and contingency plans have been documented, tested and are ready for IT VAT and CAB review.</inlineHelpText>
        <label>IT Rollback Plan Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__IT_Security_Reviews_Complete__c</fullName>
        <description>IT Feature Freeze Criteria for all Security reviews, testing and fixes complete.</description>
        <inlineHelpText>Security reviews, testing and fixes complete.</inlineHelpText>
        <label>IT Security Reviews Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__IT_Stage_Environment_Ready__c</fullName>
        <description>IT Feature Freeze Criteria to ensure the Stage environment is prepared and ready for the Release Sprint/UAT.</description>
        <inlineHelpText>All 4 swimlanes for the solution are built and utilized (dev, test, stage, prod).  Dev/Test must be part of Sprint.  Stage must be used for UAT.</inlineHelpText>
        <label>IT Stage Environment Ready</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__IT_VATQuestionnaire_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>IT VAT has performed a vendor assessment or waived</inlineHelpText>
        <label>IT VAT Questionnaire Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__IT_VAT_Review_Complete__c</fullName>
        <description>IT Feature Freeze Criteria to ensure IT VAT architecture reviews, requirements and exceptions have been performed and noted.</description>
        <inlineHelpText>IT VAT architecture reviews, requirements and exceptions have been performed and noted</inlineHelpText>
        <label>IT VAT Review Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__IT_VAT_architecture_reviews_requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IT VAT architecture reviews, requirements and exceptions have been performed and noted.</description>
        <inlineHelpText>IT VAT architecture reviews, requirements and exceptions must be performed and noted.</inlineHelpText>
        <label>IT  VAT Architecture Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Is_the_work_behind_a_perm__c</fullName>
        <label>Is the work behind a perm?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Java_Package_PLSQL_Coverage__c</fullName>
        <inlineHelpText>Percent code coverage for Java Packages and PL/SQL modules.  FF criterion is at least 20%.</inlineHelpText>
        <label># of Java Pkgs and PLSQL Pkgs &lt; 20%</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__LINK_to_S1_Chatter_Group__c</fullName>
        <description>Point people to the main Chatter Group where they can ask questions or find links to important information (e.g. the current S1 Support Matrix).</description>
        <formula>HYPERLINK(&apos;https://gus.my.salesforce.com/0F9B0000000068B&apos;,&apos;Click to find Current S1 Support Matrix&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Links you to the best place to ask questions or find important information, like the S1 Support Matrix for the current release.</inlineHelpText>
        <label>LINK to S1 Chatter Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Large_Invasive_changes_are_behind_a_perm__c</fullName>
        <description>No team should put the release at risk – Any Feature or change that is large enough or invasive enough to risk the release is behind a permission or equivalent safety valve</description>
        <inlineHelpText>No team should put the release at risk – Any Feature or change that is large enough or invasive enough to risk the release is behind a permission or equivalent safety valve (Yes/No)</inlineHelpText>
        <label>Large/Invasive changes are behind a perm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__List_Monitoring_Requirements__c</fullName>
        <description>List Monitoring Requirements: new services or disabled services.</description>
        <inlineHelpText>List NEW services which require monitoring ON &amp;/OR Existing services being DISABLED</inlineHelpText>
        <label>List Monitoring Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Minor_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box if you are filing an exception request. PLEASE FILL OUT EXCEPTION RECORD AT THE BOTTOM OF THIS PAGE.</inlineHelpText>
        <label>Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__New_Services_Requiring_Monitoring__c</fullName>
        <description>Any new services that need monitoring turned on?</description>
        <inlineHelpText>Any new services that need monitoring turned on?</inlineHelpText>
        <label>New Services Requiring Monitoring</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__No_Blocking_Bugs_on_the_Freeze_Branch__c</fullName>
        <description>There are no Blocking Bugs on the Freeze Branch.</description>
        <inlineHelpText>There are no Blocking Bugs on the Freeze Branch.</inlineHelpText>
        <label>No Blocking Bugs on the Freeze Branch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__No_Open_P0_Bugs_at_FF__c</fullName>
        <description>IT Feature Freeze Criteria.  No Open P0 Bugs allowed at Feature Freeze.</description>
        <inlineHelpText>P1/P2&apos;s must be noted as exceptions and explained at WRoR.</inlineHelpText>
        <label>No Open P0 Bugs at FF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__No_Open_User_Stories__c</fullName>
        <inlineHelpText>IT RM standard FF criteria.</inlineHelpText>
        <label>No Open User Stories</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__No_Regressions_on_the_Freeze_Branch__c</fullName>
        <description>There are no Regressions on the Freeze Branch.</description>
        <inlineHelpText>There are no Regressions on the Freeze Branch.</inlineHelpText>
        <label>No Regressions on the Freeze Branch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Num_P1_Bugs_Test_Failures_to_Fix_Verify__c</fullName>
        <inlineHelpText>Number of P1 bugs or test failures to fix or verify.  FF criterion is no more than 1.</inlineHelpText>
        <label>Num P1 Bugs/TF to Fix/Verify (&lt;=1)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Num_P1_P2_Bugs_Test_Failures_1_week_old__c</fullName>
        <inlineHelpText>Number of P1/P2 Bugs or Test Failures &gt; 1 week old.  FF criterion is 0.</inlineHelpText>
        <label>Num P1/P2 Bugs/TF &gt;1 wk old (0)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Num_P1_P2_Bugs_Test_Failures_to_Fix__c</fullName>
        <inlineHelpText>Number of P1/P2 Bugs and Test Failures to Fix.</inlineHelpText>
        <label>Num P1/P2 Bugs/Test Failures to Fix</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Num_P1_P2_Bugs_Test_Failures_to_Verify__c</fullName>
        <inlineHelpText>Number of P1/P2 Bugs and Test Failures to Verify</inlineHelpText>
        <label>Num P1/P2 Bugs/Test Failures to Verify</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Automated_CBS_5__c</fullName>
        <inlineHelpText>Number of automated Complex Business Scenarios.  FF criterion is at least 5.</inlineHelpText>
        <label>Number of Automated CBS (&gt;=5)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Blocking_Bugs__c</fullName>
        <description>Number of P0, BLOCKING, RELEASE BLOCKING, or FEATURE BLOCKING bugs that are not Verified and Closed.</description>
        <inlineHelpText>Number of P0, BLOCKING, RELEASE BLOCKING, or FEATURE BLOCKING bugs that are not Verified and Closed.  FF criterion is 0.</inlineHelpText>
        <label>Number of P0/Blocking Bugs (0)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Bugs_TF_to_Fix_max_2_Dev__c</fullName>
        <description>Total Number of Bugs/TF to Fix (maximum 2 per Full-Time Developer)</description>
        <inlineHelpText>Total Number of Bugs/TF to Fix (maximum 2 per Full-Time Developer)</inlineHelpText>
        <label>Number of Bugs/TF to Fix (max 2/Dev)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Bugs_TF_to_Verify_max_2_QE__c</fullName>
        <description>Total Number of Fixed Bugs/TF to Verify (maximum 2 per Full-Time QE)</description>
        <inlineHelpText>Total Number of Fixed Bugs/TF to Verify (maximum 2 per Full-Time QE)</inlineHelpText>
        <label>Number of Bugs/TF to Verify (max 2/QE)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Bugs_missing_Automation_0__c</fullName>
        <description>Total Number of Closed P0/P1/P2 Bugs and Closed Bugs-with-Cases that do not have automation (0)</description>
        <inlineHelpText>Total Number of Closed P0/P1/P2 Bugs and Closed Bugs-with-Cases that do not have automation (0)</inlineHelpText>
        <label>Number of Bugs missing Automation (0)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Bugs_to_Fix_max_1_Dev__c</fullName>
        <description>Total Number of Bugs to Fix (maximum 1 per Full-Time Developer)</description>
        <inlineHelpText>Total Number of Bugs to Fix (maximum 1 per Full-Time Developer)</inlineHelpText>
        <label>Number of Bugs to Fix (max 1/Dev)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Bugs_to_Verify_max_1_QE__c</fullName>
        <description>Total Number of Fixed Bugs to Verify (maximum 1 per Full-Time QE)</description>
        <inlineHelpText>Total Number of Fixed Bugs to Verify (maximum 1 per Full-Time QE)</inlineHelpText>
        <label>Number of Bugs to Verify (max 1/QE)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Open_Feature_Requests__c</fullName>
        <description>Number of open feature requests scheduled for this release.</description>
        <inlineHelpText>Number of open feature requests scheduled for this release.  FF criterion is 0.</inlineHelpText>
        <label>Number of Open Feature Requests (0)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Open_User_Stories_0__c</fullName>
        <description>Number of Open User Stories – excluding “Release Sprint Theme” stories (0)</description>
        <inlineHelpText>Number of Open User Stories – excluding “Release Sprint Theme” stories (0)</inlineHelpText>
        <label>Number of Open User Stories (0)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>